# ProjectTemplate

./: .clang-format  CMakeLists.txt
assets/: .clang-format.template  .clang-tidy.template  .gitattributes.template  .gitignore.template
assets/executable/: CMakeLists.template
assets/include/project_template/: factorial.template
assets/src/: factorial.template
cmake/: CMakeRC.cmake
include/pt/: project.hpp
src/: main.cpp  project.cpp
